// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hero component renders correctly Hero renders correctly 1`] = `
<div
  className="container"
>
  <section
    className="hero"
    style={
      Object {
        "backgroundImage": "url(undefined)",
      }
    }
  >
    <div
      className="movieInfo"
    >
      <h2
        className="title"
      />
      <div
        className="wrapper"
      >
        <Genres
          genres={Array []}
        />
        <span
          className="duration"
        />
      </div>
    </div>
    <div
      className="movieDescription"
    >
      <p
        className="description"
      >
         ...
      </p>
      <div
        className="buttons"
      >
        <Button
          handleClick={[Function]}
          type="primary"
        >
          Watch Now
        </Button>
        <Button
          handleClick={[Function]}
          type="ghost"
        >
          View Info
        </Button>
      </div>
    </div>
  </section>
</div>
`;

exports[`Hero component renders correctly Hero renders correctly with loading 1`] = `
<div
  className="container"
>
  <section
    className="hero"
    style={
      Object {
        "backgroundImage": "url(undefined)",
      }
    }
  >
    <div
      className="movieInfo"
    >
      <h2
        className="title"
      />
      <div
        className="wrapper"
      >
        <Genres
          genres={Array []}
        />
        <span
          className="duration"
        />
      </div>
    </div>
    <div
      className="movieDescription"
    >
      <p
        className="description"
      >
         ...
      </p>
      <div
        className="buttons"
      >
        <Button
          handleClick={[Function]}
          type="primary"
        >
          Watch Now
        </Button>
        <Button
          handleClick={[Function]}
          type="ghost"
        >
          View Info
        </Button>
      </div>
    </div>
  </section>
</div>
`;

exports[`Hero component renders correctly Hero renders correctly with rating 1`] = `
<div
  className="container"
>
  <section
    className="hero"
    style={
      Object {
        "backgroundImage": "url(undefined)",
      }
    }
  >
    <div
      className="movieInfo"
    >
      <h2
        className="title"
      >
        Test
      </h2>
      <div
        className="wrapper"
      >
        <Genres
          genres={Array []}
        />
        <span
          className="duration"
        />
      </div>
      <div
        className="rating"
      >
        <StarRating
          starsSelected={4}
        />
        <NumRating
          rating={4}
        />
      </div>
    </div>
    <div
      className="movieDescription"
    >
      <p
        className="description"
      >
         ...
      </p>
      <div
        className="buttons"
      >
        <Button
          handleClick={[Function]}
          type="primary"
        >
          Watch Now
        </Button>
        <Button
          handleClick={[Function]}
          type="ghost"
        >
          View Info
        </Button>
      </div>
    </div>
  </section>
</div>
`;
